# Sentinel

./: .gitignore  CLAUDE.md  README.md  start.sh  start_web.sh
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
backend/: .env.example  pyproject.toml
backend/scripts/: dev.sh  download_models.py  export_coreml.py
backend/sentinel/: config.py  logging.py  main.py  types.py
backend/sentinel/api/: routes_devices.py  routes_events.py  routes_health.py  routes_safe_zone.py  routes_settings.py  routes_webrtc.py  routes_ws.py
backend/sentinel/capture/: audio_buffer.py  camera.py  microphone.py  ring_buffer.py
backend/sentinel/events/: debouncer.py  dispatcher.py  engine.py  models.py
backend/sentinel/inference/: audio.py  geometry.py  pose_rules.py  vision.py
backend/sentinel/push/: fcm.py  templates.py
backend/sentinel/storage/: config_repo.py  db.py  devices_repo.py  events_repo.py
backend/sentinel/storage/migrations/: 001_init.sql
backend/sentinel/transport/: video_track.py  webrtc.py  ws.py
backend/tests/unit/: test_audio_buffer.py  test_debouncer.py  test_geometry.py  test_pose_rules.py  test_types.py
shared/schemas/: event.schema.json  safe_zone.schema.json  settings.schema.json  webrtc_signal.schema.json
shared/test-fixtures/: geometry.json
web/: CLAUDE.md  README.md  package.json  pnpm-lock.yaml
web/messages/: en.json  ko.json
web/public/: firebase-messaging-sw.js
web/scripts/: gen-types.ts
web/src/app/: globals.css  layout.tsx  (+1 more)
(+52 files in other folders)
